Criado através do Colab

--- a/Cópia_de_Estruturas_Condicionais_e__Laços_de_Repeticao.ipynb
+++ b/Cópia_de_Estruturas_Condicionais_e__Laços_de_Repeticao.ipynb
@@ -584,7 +584,7 @@
       "cell_type": "code",
       "source": [
         "idade = float(input('Digite sua idade:'))\n",
-        "hab= int(input('Você tem carteira de motorista? Digite 1(SIM) e 2(NÃO)'))\n",
+        "hab= int(input('Você tem carteira de motorista? Digite 1(SIM) e 2(NÃO):'))\n",
         "dirigir= idade>=18\n",
         "if (idade>=18) and (hab==1):\n",
         "  print('Você pode dirigir!')\n",
@@ -598,16 +598,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d5188cb8-dc43-4bec-c27d-73c8361ac03e"
+        "outputId": "b2d794a6-3b5a-4e3a-c781-017e4c65f31f"
       },
-      "execution_count": 35,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Digite sua idade:18\n",
-            "Você tem carteira de motorista? Digite 1(SIM) e 2(NÃO)1\n",
+            "Você tem carteira de motorista? Digite 1(SIM) e 2(NÃO):1\n",
             "Você pode dirigir!\n"
           ]
         }
