Criado através do Colab

--- a/Cópia_de_Estruturas_Condicionais_e__Laços_de_Repeticao.ipynb
+++ b/Cópia_de_Estruturas_Condicionais_e__Laços_de_Repeticao.ipynb
@@ -837,57 +837,32 @@
     {
       "cell_type": "code",
       "source": [
+        "#equilatero\n",
         "a=float(input('Digite o lado A do triângulo:'))\n",
         "b=float(input('Digite o lado B do triângulo:'))\n",
         "c=float(input('Digite o lado C do triângulo:'))\n",
-        "\n",
         "triangulo=((a+b>c)and (b+c>a) and (a+c>b))\n",
-        "print('É um triangulo?',triangulo)"
+        "if (a==b) and (b==c) and(triangulo):\n",
+        "  print('Isto é um triangulo equilatero')\n",
+        "else:\n",
+        "  print('Isto não é um triangulo equilatero')"
       ],
       "metadata": {
         "id": "SR8KrC15UZPa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6bbf18ab-bd0d-4fdd-ba99-ce783b2f41ac"
+        "outputId": "ddc899ba-3f90-4f7d-a7ac-e8a67a48824a"
       },
-      "execution_count": 1,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite o lado A do triângulo:3\n",
-            "Digite o lado B do triângulo:3\n",
-            "Digite o lado C do triângulo:3\n",
-            "É um triangulo? True\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#equilatero\n",
-        "if (a==b) and (b==c) and(triangulo):\n",
-        "  print('Isto é um triangulo equilatero')\n",
-        "else:\n",
-        "  print('Isto não é um triangulo equilatero')\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "1nEpVozjquLK",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a841e8ad-001c-4a69-84cc-609f0943a479"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
+            "Digite o lado A do triângulo:2\n",
+            "Digite o lado B do triângulo:2\n",
+            "Digite o lado C do triângulo:2\n",
             "Isto é um triangulo equilatero\n"
           ]
         }
