Criado através do Colab

--- a/Cópia_de_Estruturas_Condicionais_e__Laços_de_Repeticao.ipynb
+++ b/Cópia_de_Estruturas_Condicionais_e__Laços_de_Repeticao.ipynb
@@ -181,17 +181,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XEVxKUgL9Hh2",
-        "outputId": "c50dd49b-2e22-41e4-dfec-0db2ca8eeaa5"
+        "outputId": "302f1244-218c-416d-e618-1b0be6a7b84b"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
             "Digite o primeiro lado do triangulo: 5\n",
-            "Digite o segundo lado do triangulo: 3\n",
-            "Digite o terceiro lado do triangulo: 1\n"
+            "Digite o segundo lado do triangulo: 4\n",
+            "Digite o terceiro lado do triangulo: 6\n"
           ]
         }
       ]
@@ -396,9 +396,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vtmfAfkZ_-aN",
-        "outputId": "d5b70535-cbca-4131-990d-ea39fffe387a"
+        "outputId": "a2b283b3-e773-4e07-a7a0-e2834978b2f4"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -408,7 +408,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 25
         }
       ]
     },
@@ -425,19 +425,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DXji0QefCbBa",
-        "outputId": "657bda18-50b1-4fdc-dbfc-b489176c3b02"
+        "outputId": "03bcb011-b48e-4042-aac7-896be4806adc"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "False"
+              "True"
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 26
         }
       ]
     },
@@ -502,7 +502,7 @@
         },
         "outputId": "b1d243a9-87b0-4599-fdd9-542bc19ee96b"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -550,7 +550,7 @@
         },
         "outputId": "a2a0609b-9f03-44b4-be37-d721947d1d68"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -594,24 +594,10 @@
         "     print('Você não pode passar')\n"
       ],
       "metadata": {
-        "id": "hzar4N7KHk4m",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b2d794a6-3b5a-4e3a-c781-017e4c65f31f"
+        "id": "hzar4N7KHk4m"
       },
-      "execution_count": 36,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Digite sua idade:18\n",
-            "Você tem carteira de motorista? Digite 1(SIM) e 2(NÃO):1\n",
-            "Você pode dirigir!\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -837,33 +823,119 @@
     {
       "cell_type": "code",
       "source": [
-        "#equilatero\n",
         "a=float(input('Digite o lado A do triângulo:'))\n",
         "b=float(input('Digite o lado B do triângulo:'))\n",
         "c=float(input('Digite o lado C do triângulo:'))\n",
         "triangulo=((a+b>c)and (b+c>a) and (a+c>b))\n",
-        "if (a==b) and (b==c) and(triangulo):\n",
-        "  print('Isto é um triangulo equilatero')\n",
-        "else:\n",
-        "  print('Isto não é um triangulo equilatero')"
+        "triangulo"
       ],
       "metadata": {
         "id": "SR8KrC15UZPa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ddc899ba-3f90-4f7d-a7ac-e8a67a48824a"
+        "outputId": "b5b68592-388f-4eb3-ea46-fdb5b5cbd005"
       },
-      "execution_count": 37,
+      "execution_count": 19,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Digite o lado A do triângulo:5\n",
+            "Digite o lado B do triângulo:5\n",
+            "Digite o lado C do triângulo:4\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#equilatero\n",
+        "if (a==b) and (b==c) and(triangulo):\n",
+        "  print('Isto é um triangulo equilatero')\n",
+        "else:\n",
+        "  print('Isto não é um triangulo equilatero')"
+      ],
+      "metadata": {
+        "id": "MJgSOlJjQFeF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b28c1696-bbb5-44f8-e95d-09dfa9f7d836"
+      },
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite o lado A do triângulo:2\n",
-            "Digite o lado B do triângulo:2\n",
-            "Digite o lado C do triângulo:2\n",
-            "Isto é um triangulo equilatero\n"
+            "Isto não é um triangulo equilatero\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#escaleno\n",
+        "if ((a!=b) and (b!=c) and (c!=a)and (triangulo)):\n",
+        "  print('Isto é um triangulo escaleno')\n",
+        "else:\n",
+        "  print('Isto não é um triangulo escaleno')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q5oL9ZWDQ_bL",
+        "outputId": "cefb453f-9d5a-4d1a-a226-1ae086177575"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Isto não é um triangulo escaleno\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#isosceles\n",
+        "if ((a==b) ^ (a==c) and (b!=c)) or ((b==c)^(b==a)) and (triangulo):\n",
+        "  print('Isto é um triangulo isosceles')\n",
+        "else:\n",
+        "  print('Isto não é um triangulo isosceles')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L6ZOGQ3JRPV6",
+        "outputId": "8cc352ed-ecb2-4b65-aa1f-9f11b9d00c25"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Isto é um triangulo isosceles\n"
           ]
         }
       ]
