Criado através do Colab

--- a/Cópia_de_EstruturasCondicionaisExercicios.ipynb
+++ b/Cópia_de_EstruturasCondicionaisExercicios.ipynb
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "_U9oF_Ijz216",
         "colab": {
@@ -109,7 +109,7 @@
         },
         "outputId": "0f2a1913-075d-43bd-f69c-78adc559ee9d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +149,7 @@
         },
         "outputId": "8a2598cc-c16e-4e16-a4d6-984ee2a9b940"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,7 +203,7 @@
         },
         "outputId": "0ec4e402-6564-49b2-f3b7-e3a9a98e7685"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,7 +273,7 @@
         },
         "outputId": "4f9962d6-8707-4756-aa65-c3b628d4acbe"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,7 +311,7 @@
         },
         "outputId": "82e869bc-eb06-49be-cb42-1350f5ef6512"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +349,7 @@
         },
         "outputId": "db3a9af0-d81d-4d07-a1f0-8303ceb26fc4"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -398,7 +398,7 @@
         },
         "outputId": "1b86de74-fc56-4b40-fe2c-dc9229a776ca"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,7 +442,7 @@
         },
         "outputId": "b915dfed-ae3e-4b95-c1f3-7f5cb7769810"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -558,12 +558,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "peso= float(input('Digite seu peso terrestre:'))\n",
+        "mercurio= 0.37*peso\n",
+        "venus= 0.88*peso\n",
+        "marte= 0.38*peso\n",
+        "jupiter= 2.64*peso\n",
+        "saturno= 1.15*peso\n",
+        "urano= 1.17*peso\n",
+        "print('A gravidade de Mercurio é de 0,37. Sendo assim, seu peso em Mercúrio seria:',mercurio,'kg.')\n",
+        "print('A gravidade de Vênus é de 0,88. Sendo assim, seu peso em Vênus seria:',venus,'kg.')\n",
+        "print('A gravidade de Marte é de 0,38. Sendo assim, seu peso em Marte seria:',marte,'kg.')\n",
+        "print('A gravidade de Júpiter é de 2,64. Sendo assim, seu peso em Júpiter seria:',jupiter,'kg.')\n",
+        "print('A gravidade de Saturno é de 1,15. Sendo assim, seu peso em Saturno seria:',saturno,'kg.')\n",
+        "print('A gravidade de Urano é de 1,17. Sendo assim, seu peso em Urano seria:',urano,'kg.')"
+      ],
       "metadata": {
-        "id": "4vD8ciGWNzKA"
+        "id": "4vD8ciGWNzKA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f0c9d197-c027-43e3-a24a-52f458fa8dfe"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite seu peso terrestre:60\n",
+            "A gravidade de Mercurio é de 0,37. Sendo assim, seu peso em Mercúrio seria: 22.2 kg.\n",
+            "A gravidade de Vênus é de 0,88. Sendo assim, seu peso em Vênus seria: 52.8 kg.\n",
+            "A gravidade de Marte é de 0,38. Sendo assim, seu peso em Marte seria: 22.8 kg.\n",
+            "A gravidade de Júpiter é de 2,64. Sendo assim, seu peso em Júpiter seria: 158.4 kg.\n",
+            "A gravidade de Saturno é de 1,15. Sendo assim, seu peso em Saturno seria: 69.0 kg.\n",
+            "A gravidade de Urano é de 1,17. Sendo assim, seu peso em Urano seria: 70.19999999999999 kg.\n"
+          ]
+        }
+      ]
     }
   ]
 }
