Criado através do Colab

--- a/Cópia_de_EstruturasCondicionaisExercicios.ipynb
+++ b/Cópia_de_EstruturasCondicionaisExercicios.ipynb
@@ -237,13 +237,76 @@
     {
       "cell_type": "code",
       "source": [
-        "# Seu código aqui"
+        "saldo=1000\n",
+        "opcoes1= int(input('Digite 1 para fazer um depósito. Digite 2 para fazer um saque:'))\n",
+        "if(opcoes1==1):\n",
+        "  depositar=float(input('Digite o valor do deposito:'))\n",
+        "  saldo= saldo + depositar\n",
+        "  print('Seu saldo é de:',saldo)\n",
+        "elif(opcoes1==2):\n",
+        "  saq1= float(input('Digite o valor de seu saque:'))\n",
+        "  saldo= saldo - saq1\n",
+        "  print('Seu saldo é de:',saldo)\n",
+        "else:\n",
+        "  print('Digite um número válido:')\n",
+        "\n",
+        "opcoes2= int(input('Digite 1 para fazer um depósito. Digite 2 para fazer um saque:'))\n",
+        "if(opcoes2==1):\n",
+        "  depositar1=float(input('Digite o valor do deposito:'))\n",
+        "  saldo= saldo + depositar1\n",
+        "  print('Seu saldo é de:',saldo)\n",
+        "elif(opcoes2==2):\n",
+        "  saq2= float(input('Digite o valor de seu saque:'))\n",
+        "  saldo= saldo - saq2\n",
+        "  print('Seu saldo é de:',saldo)\n",
+        "else:\n",
+        "  print('Digite um número válido:')\n",
+        "\n",
+        "opcoes3= int(input('Digite 1 para fazer um depósito. Digite 2 para fazer um saque:'))\n",
+        "if(opcoes3==1):\n",
+        "  depositar2=float(input('Digite o valor do deposito:'))\n",
+        "  saldo= saldo + depositar2\n",
+        "  print('Seu saldo final é:',saldo)\n",
+        "elif(opcoes3==2):\n",
+        "  saq3= float(input('Digite o valor de seu saque:'))\n",
+        "  saldo= saldo - saq3\n",
+        "  print('Seu saldo final é:',saldo)\n",
+        "else:\n",
+        "  print('Digite um número válido:')\n",
+        "\n",
+        "if(saldo>0):\n",
+        "  print('Seu saldo é positivo!')\n",
+        "else:\n",
+        "  print('Seu saldo é negativo!')\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "7c_2sq0m0iSV"
+        "id": "7c_2sq0m0iSV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fec370ac-60f0-47b8-fd7b-7dcf44a3d08f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite 1 para fazer um depósito. Digite 2 para fazer um saque:2\n",
+            "Digite o valor de seu saque:1000\n",
+            "Seu saldo é de: 0.0\n",
+            "Digite 1 para fazer um depósito. Digite 2 para fazer um saque:1\n",
+            "Digite o valor do deposito:20000\n",
+            "Seu saldo é de: 20000.0\n",
+            "Digite 1 para fazer um depósito. Digite 2 para fazer um saque:1\n",
+            "Digite o valor do deposito:5000\n",
+            "Seu saldo final é: 25000.0\n",
+            "Seu saldo é positivo!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -485,21 +548,59 @@
     {
       "cell_type": "code",
       "source": [
-        "usuario= input('Digite seu nome:')\n",
-        "senha= float(input('Digite sua senha de números:')\n",
+        "usuario= input('Digite seu nome de usuario:')\n",
+        "senha= float(input('Digite sua senha de números:'))\n",
         "saldo = float(input('Digite seu saldo bancário:'))\n",
         "seguranca1 = input('Digite seu nome novamente:')\n",
-        "seguranca2 =float(input('Digite sua senha de números novamente:')\n",
+        "seguranca2 =float(input('Digite sua senha de números novamente:'))\n",
         "\n",
         "if (seguranca1 == usuario) and (seguranca2 == senha):\n",
-        "  continuacao = input('Escolhe se quer depositar ou sacar seu dinheiro:')\n",
+        "  continuacao = int(input('Digite 1 para fazer um depósito. Digite 2 para fazer um saque:'))\n",
+        "  if(continuacao==1):\n",
+        "   depositar =float(input('Digite o valor do deposito:'))\n",
+        "   saldo= saldo + depositar\n",
+        "   print('Seu saldo é de:',saldo)\n",
+        "  elif(continuacao==2):\n",
+        "   saq1= float(input('Digite o valor de seu saque:'))\n",
+        "   saldo= saldo - saq1\n",
+        "   print('Seu saldo é de:',saldo)\n",
+        "else:\n",
+        "  print('Seu nome de usuário e/ou senha estão errados.')\n",
+        "\n",
+        "if(saldo<0):\n",
+        "  print('Seu saldo é negativo, precisa pagar juros!')\n",
+        "else:\n",
+        "  print('Seu saldo é positivo!',saldo)\n",
+        "\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
-        "id": "7hK5dphxrzmd"
+        "id": "7hK5dphxrzmd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "07adf642-d0d6-4c23-b054-f4944cc6a3c4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite seu nome de usuario:krisan\n",
+            "Digite sua senha de números:2505\n",
+            "Digite seu saldo bancário:1000\n",
+            "Digite seu nome novamente:krisan\n",
+            "Digite sua senha de números novamente:2505\n",
+            "Digite 1 para fazer um depósito. Digite 2 para fazer um saque:1\n",
+            "Digite o valor do deposito:23\n",
+            "Seu saldo é de: 1023.0\n",
+            "Seu saldo é positivo! 1023.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -521,7 +622,21 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "preco=float(input('Digite o valor da compra:'))\n",
+        "print('Você tem opção de ter 10% para pagamento a vista')\n",
+        "if(preco<=200):\n",
+        "  print('Você tem direito a 2x prestações sem juros')\n",
+        "if(preco<=300):\n",
+        "  print('Você tem direito a 3x prestações sem juros')\n",
+        "if(preco<=400):\n",
+        "  print('Você tem direito a 4x prestações sem juros')\n",
+        "if(preco<=500):\n",
+        "  print('Você tem direito a 5x prestações sem juros')\n",
+        "\n",
+        "\n",
+        " decida= int(input('Digite'))"
+      ],
       "metadata": {
         "id": "fSbnv1AvNynH"
       },
@@ -580,7 +695,7 @@
         },
         "outputId": "f0c9d197-c027-43e3-a24a-52f458fa8dfe"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
