Criado através do Colab

--- a/Cópia_de_EstruturasCondicionaisExercicios.ipynb
+++ b/Cópia_de_EstruturasCondicionaisExercicios.ipynb
@@ -288,7 +288,7 @@
         },
         "outputId": "fec370ac-60f0-47b8-fd7b-7dcf44a3d08f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,6 +574,7 @@
         "\n",
         "\n",
         "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -583,7 +584,7 @@
         },
         "outputId": "07adf642-d0d6-4c23-b054-f4944cc6a3c4"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -624,24 +625,79 @@
       "cell_type": "code",
       "source": [
         "preco=float(input('Digite o valor da compra:'))\n",
-        "print('Você tem opção de ter 10% para pagamento a vista')\n",
-        "if(preco<=200):\n",
-        "  print('Você tem direito a 2x prestações sem juros')\n",
-        "if(preco<=300):\n",
-        "  print('Você tem direito a 3x prestações sem juros')\n",
-        "if(preco<=400):\n",
-        "  print('Você tem direito a 4x prestações sem juros')\n",
-        "if(preco<=500):\n",
-        "  print('Você tem direito a 5x prestações sem juros')\n",
         "\n",
+        "if(preco<=0):\n",
+        "  print('Inválido')\n",
+        "elif(preco > 200):\n",
+        " print(\"Opções:\")\n",
+        " print(\"a = 10% para pagamento a vista\")\n",
+        " print(\"b = Prestações de 2x sem juros\")\n",
+        " print(\"c = Prestação de 10x, porém terá o acréscimo com juros compostos de 2% ao mês\")\n",
+        "elif(preco > 300):\n",
+        " print(\"Opções:\")\n",
+        " print(\"a = 10% para pagamento a vista\")\n",
+        " print(\"b = Prestações de  3x sem juros\")\n",
+        " print(\"c = Prestação de 10x, porém terá o acréscimo com juros compostos de 2% ao mês\")\n",
+        "elif(preco > 400):\n",
+        " print(\"Opções:\")\n",
+        " print(\"a = 10% para pagamento a vista\")\n",
+        " print(\"b = Prestações de 4x sem juros\")\n",
+        " print(\"c = Prestação de 10x, porém terá o acréscimo com juros compostos de 2% ao mês\")\n",
+        "elif(preco > 500):\n",
+        " print(\"Opções:\")\n",
+        " print(\"a = 10% para pagamento a vista\")\n",
+        " print(\"b = Prestações de  5x sem juros\")\n",
+        " print(\"c = Prestação de 10x, porém terá o acréscimo com juros compostos de 2% ao mês\")\n",
+        "escolha= input('Qual é a forma de pagamento que vc deseja? a, b ou c?' )\n",
         "\n",
-        " decida= int(input('Digite'))"
+        "if (escolha == \"a\"):\n",
+        " total = preco - (preco/10)\n",
+        " print(\"Você pagará\" ,total, \"R$ á vista\")\n",
+        "\n",
+        "if (escolha == \"b\") and (preco < 300):\n",
+        " total = preco/ 2\n",
+        " print(\"Você pagará\" ,total, \"R$ por 2x\")\n",
+        "\n",
+        "elif (escolha == \"b\") and (preco < 400):\n",
+        " total = preco / 3\n",
+        " print(\"Você pagará\" ,total, \"R$ por 3x\")\n",
+        "\n",
+        "elif (escolha == \"b\") and (preco < 500):\n",
+        " total = preco / 4\n",
+        " print(\"Você pagará\" ,total, \"R$ por 4x\")\n",
+        "\n",
+        "elif (escolha == \"b\") and (preco >= 500):\n",
+        "  total = preco / 5\n",
+        "  print(\"Você pagará\" ,total, \"R$ por 5x\")\n",
+        "elif (escolha == \"c\"):\n",
+        "  prestacao = preco / 10\n",
+        "  juros = prestacao * 0.2\n",
+        "  total = juros + prestacao\n",
+        "  print(\"Você pagará\", total , \"R$ por 10x\")\n"
       ],
       "metadata": {
-        "id": "fSbnv1AvNynH"
+        "id": "fSbnv1AvNynH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dad4d204-89b5-429c-9983-77f2d2e0fec3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o valor da compra:500\n",
+            "Opções:\n",
+            "a = 10% para pagamento a vista\n",
+            "b = Prestações de 2x sem juros\n",
+            "c = Prestação de 10x, porém terá o acréscimo com juros compostos de 2% ao mês\n",
+            "Qual é a forma de pagamento que vc deseja? a, b ou c?b\n",
+            "Você pagará 100.0 R$ por 5x\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -681,33 +737,36 @@
         "jupiter= 2.64*peso\n",
         "saturno= 1.15*peso\n",
         "urano= 1.17*peso\n",
-        "print('A gravidade de Mercurio é de 0,37. Sendo assim, seu peso em Mercúrio seria:',mercurio,'kg.')\n",
-        "print('A gravidade de Vênus é de 0,88. Sendo assim, seu peso em Vênus seria:',venus,'kg.')\n",
-        "print('A gravidade de Marte é de 0,38. Sendo assim, seu peso em Marte seria:',marte,'kg.')\n",
-        "print('A gravidade de Júpiter é de 2,64. Sendo assim, seu peso em Júpiter seria:',jupiter,'kg.')\n",
-        "print('A gravidade de Saturno é de 1,15. Sendo assim, seu peso em Saturno seria:',saturno,'kg.')\n",
-        "print('A gravidade de Urano é de 1,17. Sendo assim, seu peso em Urano seria:',urano,'kg.')"
+        "pergunta = input(\"Escolha o planeta que deseja saber seu peso \")\n",
+        "if (pergunta == \"mercurio\"):\n",
+        " print('A gravidade de Mercurio é de 0,37. Sendo assim, seu peso em Mercúrio seria:',mercurio,'kg.')\n",
+        "if (pergunta == \"venus\"):\n",
+        " print('A gravidade de Vênus é de 0,88. Sendo assim, seu peso em Vênus seria:',venus,'kg.')\n",
+        "if (pergunta == \"marte\"):\n",
+        " print('A gravidade de Marte é de 0,38. Sendo assim, seu peso em Marte seria:',marte,'kg.')\n",
+        "if (pergunta == \"jupter\"):\n",
+        " print('A gravidade de Júpiter é de 2,64. Sendo assim, seu peso em Júpiter seria:',jupiter,'kg.')\n",
+        "if (pergunta == \"saturno\"):\n",
+        " print('A gravidade de Saturno é de 1,15. Sendo assim, seu peso em Saturno seria:',saturno,'kg.')\n",
+        "if (pergunta == \"urano\"):\n",
+        " print('A gravidade de Urano é de 1,17. Sendo assim, seu peso em Urano seria:',urano,'kg.')"
       ],
       "metadata": {
         "id": "4vD8ciGWNzKA",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f0c9d197-c027-43e3-a24a-52f458fa8dfe"
+        "outputId": "6b5e87e4-b51f-4b74-9ca3-c4b22f232a49"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Digite seu peso terrestre:60\n",
-            "A gravidade de Mercurio é de 0,37. Sendo assim, seu peso em Mercúrio seria: 22.2 kg.\n",
-            "A gravidade de Vênus é de 0,88. Sendo assim, seu peso em Vênus seria: 52.8 kg.\n",
-            "A gravidade de Marte é de 0,38. Sendo assim, seu peso em Marte seria: 22.8 kg.\n",
-            "A gravidade de Júpiter é de 2,64. Sendo assim, seu peso em Júpiter seria: 158.4 kg.\n",
-            "A gravidade de Saturno é de 1,15. Sendo assim, seu peso em Saturno seria: 69.0 kg.\n",
-            "A gravidade de Urano é de 1,17. Sendo assim, seu peso em Urano seria: 70.19999999999999 kg.\n"
+            "Escolha o planeta que deseja saber seu peso venus\n",
+            "A gravidade de Vênus é de 0,88. Sendo assim, seu peso em Vênus seria: 52.8 kg.\n"
           ]
         }
       ]
