Criado através do Colab

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/bMRDkCKqISS6BZ6v4CPD",
+      "authorship_tag": "ABX9TyOCDiEBvARRo8reVy0dxfSp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -318,6 +318,16 @@
     {
       "cell_type": "code",
       "source": [
+        "#bandeira= True\n",
+        "#for verificador in 'Anderson':\n",
+        "  #if verificador == 'e':\n",
+        "   #print('Achei a letra e')\n",
+        "   #break\n",
+        " # else:\n",
+        "   # print('Não achei a letra h')\n",
+        " # if bandeira == True:\n",
+        "    #print('Não achei a letra e')\n",
+        "\n",
         "bandeira= False\n",
         "for verificador in \"Anderson\":\n",
         "  if verificador == \"e\":\n",
@@ -333,9 +343,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qVb5ZCERv1Bb",
-        "outputId": "59ef33fc-7542-4749-ee27-dbaedfe7b1e4"
+        "outputId": "7c329a50-a04c-4225-dfb0-ef818540a082"
       },
-      "execution_count": 31,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,6 +355,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "iGER9aUs4-0i"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
